--- a/pltests/pltests.pl.in
+++ b/pltests/pltests.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: pltests.pl.in,v 1.2 2004-10-09 14:07:20 opengl2772 Exp $
+# $Id: pltests.pl.in,v 1.3 2004-10-09 20:09:14 opengl2772 Exp $
 # Copyright (C) 2004 Tadamasa Teranishi
 #               2004 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -49,7 +49,9 @@ sub selectdata() {
     for my $lang (@lang) {
         $lang = $ENV{$lang};
         if (defined $lang) {
-            if ($lang =~ /^(..)/) {
+            if ($lang eq "C") {
+                return "$base/en";
+            } elsif ($lang =~ /^(..)/) {
                 my $dir = "$base/$1";
                 if (-d "$dir") {
                     return $dir;
