--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -263,7 +263,7 @@ $WAKATI  = $@OPT_WAKATI_DEFAULT@;
   'message/news' => ['mailnews.pl'],
   'message/rfc822' => ['mailnews.pl'],
   'text/hnf' => ['hnf.pl'],
-  'text/html' => ['html.pl'],	# Don't remove. Some filters use it internally.
+  'text/html' => ['html.pl'],
   'text/html; x-type=mhonarc' => ['mhonarc.pl'],
   'text/html; x-type=pipermail' => ['pipermail.pl'],
   'text/plain; x-type=rfc' => ['rfc.pl'],
