* pl/{util.pl, gfilter.pl}: Replace $mknmz::SYSTEM to $SYSTEM. * scripts/{nmzcat.in, nmzegrep.in}: Remove package mknmz; * pl/filter.pl.in: Move win32_yen_to_slash() to pl/util.pl. * scripts/mknmz.in(load_rcfile, parse_options, load_target_list, absolute_path, find_target): Change to use util::win32_yen_to_slash. * pltests/Makefile.am(EXTRA_DIST): Remove README-ja.txt.

--- a/pltests/Makefile.am
+++ b/pltests/Makefile.am
@@ -21,7 +21,7 @@ PROGRAM = alltests.pl pltests.pl \
 	namazu-cgi-7.pl namazu-cgi-8.pl \
 	namazu-cgi-9.pl namazu-cgi-10.pl
 
-EXTRA_DIST = README-ja.txt pltests.pl.in \
+EXTRA_DIST = pltests.pl.in \
 	alltests.pl.in \
 	mknmz-1.pl.in mknmz-2.pl.in mknmz-4.pl.in \
 	mknmz-5.pl.in mknmz-6.pl.in mknmz-7.pl.in mknmz-8.pl.in \
