--- a/scripts/nmzegrep.in
+++ b/scripts/nmzegrep.in
@@ -4,7 +4,7 @@
 # nmzegrep - search namazu-indexed documents for a given pattern and 
 #            print lines matching the pattern.
 # 
-# $Id: nmzegrep.in,v 1.2 2004-10-01 16:43:16 usu Exp $
+# $Id: nmzegrep.in,v 1.3 2004-10-17 09:25:09 usu Exp $
 #
 # Copyright (C) 2004 Yukio USUDA All rights reserved.
 # Copyright (C) 2004 Namazu Project All rights reserved.
@@ -25,11 +25,6 @@
 #  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 #  02111-1307, USA
 #
-
-{
-    package mknmz;
-    $SYSTEM = ^O ;
-}
 
 use strict;
 use FileHandle;
@@ -121,7 +116,7 @@ exit 0;
 
 muda(
     $var::USE_NKF_MODULE, $var::OUTPUT_DIR,
-    $mknmz::SYSTEM, $conf::NKF
+    $conf::NKF
     );
 
 sub muda {};
