--- a/pltests/alltests.pl.in
+++ b/pltests/alltests.pl.in
@@ -1,6 +1,6 @@
 #!%PERL% -w
 #
-# $Id: alltests.pl.in,v 1.2 2004-10-09 13:34:07 usu Exp $
+# $Id: alltests.pl.in,v 1.3 2004-10-19 19:36:27 opengl2772 Exp $
 # Copyright (C) 2004 Tadamasa Teranishi
 #               2004 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -27,8 +27,6 @@
 use strict;
 require 'pltests.pl';
 
-my $SYSTEM = $^O;
-
 my @TESTS = (
     'mknmz-1.pl', 'mknmz-2.pl', 'mknmz-4.pl', 
     'gcnmz-1.pl',
@@ -52,7 +50,7 @@ $ENV{'NAMAZUNORC'} = 'ALL';
 
 print "  *** starting $0\n";
 
-#if ($SYSTEM eq "MSWin32" || $SYSTEM eq "os2") {
+#if ($English::OSNAME eq "MSWin32" || $English::OSNAME eq "os2") {
 #    my $comspec = "cmd";
 #    $comspec = $ENV{'COMSPEC'} if (defined $ENV{'COMSPEC'});
 #    if ($comspec =~ m/command\.com$/i) {
