--- a/pltests/pltests.pl.in
+++ b/pltests/pltests.pl.in
@@ -1,6 +1,6 @@
 #
 # -*- Perl -*-
-# $Id: pltests.pl.in,v 1.3 2004-10-09 20:09:14 opengl2772 Exp $
+# $Id: pltests.pl.in,v 1.4 2004-10-19 19:36:27 opengl2772 Exp $
 # Copyright (C) 2004 Tadamasa Teranishi
 #               2004 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -26,6 +26,7 @@
 
 package pltests;
 use strict;
+use English;
 require Cwd;
 use IO::File;
 use File::Basename;
@@ -33,9 +34,7 @@ use File::Copy;
 
 sub cdie (@);
 
-my $SYSTEM = $^O;
-
-if ($SYSTEM eq "MSWin32" || $SYSTEM eq "os2") {
+if ($English::OSNAME eq "MSWin32" || $English::OSNAME eq "os2") {
     cdie 'Error: "pkgdatadir": Undefined environment variable.' unless(defined $ENV{'pkgdatadir'});
 } else {
     eval '$ENV{pkgdatadir} = "@pkgdatadir@" unless(defined $ENV{pkgdatadir})';
@@ -109,7 +108,7 @@ sub putline($$;$) {
 
     if (defined $args) {
         for my $arg (@args) {
-            if ($SYSTEM eq "MSWin32" || $SYSTEM eq "os2") {
+            if ($English::OSNAME eq "MSWin32" || $English::OSNAME eq "os2") {
                 if ($arg !~ /^".*"$/) {
                     $arg =~ s!/!\\!g;
                 }
@@ -120,7 +119,7 @@ sub putline($$;$) {
                 }
             }
         }
-        if ($SYSTEM eq "MSWin32" || $SYSTEM eq "os2") {
+        if ($English::OSNAME eq "MSWin32" || $English::OSNAME eq "os2") {
             if ($args[0] =~ m/(?:mknmz|gcnmz)\.bat$/i) {
                 @args = ("perl", @args);
             } elsif ($args[0] =~ m/\.bat$/i) {
@@ -169,7 +168,7 @@ sub cat($) {
 sub localpath($) {
     my ($path) = @_;
 
-    $path =~ s!/!\\!g if (($SYSTEM eq "MSWin32") || ($SYSTEM eq "os2"));
+    $path =~ s!/!\\!g if (($English::OSNAME eq "MSWin32") || ($English::OSNAME eq "os2"));
 
     return $path;
 }
@@ -178,7 +177,7 @@ sub binpath($) {
     my ($cmd) = @_;
     my $path = undef;
 
-    if ($SYSTEM eq "MSWin32") {
+    if ($English::OSNAME eq "MSWin32") {
         if ($cmd =~ /namazu.cgi/) {
             $path = "../libexec/$cmd.exe";  # Windows 9x,Me need ".exe"
         } elsif ($cmd =~ /.namazurc/) {
@@ -212,7 +211,7 @@ sub binpath($) {
 sub duprcs($) {
     my ($rc) = @_;
 
-    if ($SYSTEM eq "MSWin32") {
+    if ($English::OSNAME eq "MSWin32") {
         ;
     } else {
         if (-d "../src/.libs") {
@@ -227,18 +226,19 @@ sub duprcs($) {
 sub checkcmd($) {
     my $cmd = shift;
     my $pd = ':';
-    $pd = ';' if (($SYSTEM eq "MSWin32") || ($SYSTEM eq "os2"));
+    $pd = ';' if (($English::OSNAME eq "MSWin32") || ($English::OSNAME eq "os2"));
 
     for my $dir (split(/$pd/, $ENV{'PATH'})) {
+        win32_yen_to_slash(\$dir);
         return "$dir/$cmd" if (-x "$dir/$cmd");
         return "$dir/$cmd" if (-x "$dir/$cmd.com" &&
-                (($SYSTEM eq "MSWin32") || ($SYSTEM eq "os2")));
+                (($English::OSNAME eq "MSWin32") || ($English::OSNAME eq "os2")));
         return "$dir/$cmd" if (-x "$dir/$cmd.exe" &&
-                (($SYSTEM eq "MSWin32") || ($SYSTEM eq "os2")));
+                (($English::OSNAME eq "MSWin32") || ($English::OSNAME eq "os2")));
         return "$dir/$cmd" if (-x "$dir/$cmd.bat" &&
-                               ($SYSTEM eq "MSWin32"));
+                               ($English::OSNAME eq "MSWin32"));
         return "$dir/$cmd" if (-x "$dir/$cmd.cmd" &&
-                               ($SYSTEM eq "os2"));
+                               ($English::OSNAME eq "os2"));
     }
     return undef;
 }
@@ -310,8 +310,8 @@ sub syscmd(%)
     # default option
     $option{stdout} = '/dev/null' unless(defined $option{stdout});
     $option{stderr} = '/dev/null' unless(defined $option{stderr});
-    $option{mode_stdout} = 'at' unless(defined $option{mode_stdout});
-    $option{mode_stderr} = 'at' unless(defined $option{mode_stderr});
+    $option{mode_stdout} = 'wt' unless(defined $option{mode_stdout});
+    $option{mode_stderr} = 'wt' unless(defined $option{mode_stderr});
     $option{maxsize} = -1 unless(defined $option{maxsize});
 
     my $handle_out = undef;
@@ -361,7 +361,7 @@ sub syscmd(%)
     }
 
     my $arg;
-    if ($SYSTEM eq "MSWin32" || $SYSTEM eq "os2") {
+    if ($English::OSNAME eq "MSWin32" || $English::OSNAME eq "os2") {
         for $arg (@args) {
             if ($arg !~ /^".*"$/) {
                 $arg =~ s!/!\\!g;
@@ -458,7 +458,7 @@ sub syscmd(%)
                 normalize_nl(\$conts_out) if (defined $text_stdout);
 
                 my $file = $option{stdout};
-                if ($SYSTEM eq "MSWin32" || $SYSTEM eq "os2") {
+                if ($English::OSNAME eq "MSWin32" || $English::OSNAME eq "os2") {
                     $file =~ s!/!\\!g;
                 }
                 if (!open(OUT, "$mode_stdout$file")) {
@@ -489,7 +489,7 @@ sub syscmd(%)
                 normalize_nl(\$conts_err) if (defined $text_stderr);
     
                 my $file = $option{stderr};
-                if ($SYSTEM eq "MSWin32" || $SYSTEM eq "os2") {
+                if ($English::OSNAME eq "MSWin32" || $English::OSNAME eq "os2") {
                     $file =~ s!/!\\!g;
                 }
                 if (!open(OUT, "$mode_stderr$file")) {
@@ -532,6 +532,16 @@ sub gtnmz ($) {
     my $total = @added - @deleted;
 
     return $total;
+}
+
+# convert \ to / with consideration for Shift_JIS Kanji code
+sub win32_yen_to_slash ($) {
+    my ($filenameref) = @_;
+    if (($English::OSNAME eq "MSWin32") || ($English::OSNAME eq "os2")) {
+        $$filenameref =~
+                s!([\x81-\x9f\xe0-\xef][\x40-\x7e\x80-\xfc]|[\x01-\x7f])!
+                $1 eq "\\" ? "/" : $1!gex;
+    }
 }
 
 1;
