--- a/scripts/nmzcat.in
+++ b/scripts/nmzcat.in
@@ -3,7 +3,7 @@
 # -*- Perl -*-
 # nmzcat - print file content on the standard output.
 #
-# $Id: nmzcat.in,v 1.2 2004-10-17 09:25:09 usu Exp $
+# $Id: nmzcat.in,v 1.3 2004-10-20 14:44:40 opengl2772 Exp $
 #
 # Copyright (C) 2004 Yukio USUDA All rights reserved.
 # Copyright (C) 2004 Namazu Project All rights reserved.
@@ -26,6 +26,7 @@
 
 require 5.004;
 use strict;
+use English;
 
 if (@ARGV == 0) {
     print "usage: nmzcat <target>...\n";
@@ -43,10 +44,8 @@ require "document.pl" || die "unable to require \"document.pl\"\n";
 require "var.pl" || die "unable to require \"var.pl\"\n";
 require "conf.pl" || die "unable to require \"conf.pl\"\n";
 
-my $SYSTEM = $^O;
-
 my $tmpdir = "/tmp/NMZ$$";
-if ($SYSTEM eq "MSWin32") {
+if ($English::OSNAME eq "MSWin32") {
     $tmpdir = "$ENV{'TMP'}/NMZ$$";
 }
 if (mkdir $tmpdir) {
