--- a/pl/filter.pl.in
+++ b/pl/filter.pl.in
@@ -2,7 +2,7 @@
 # -*- Perl -*-
 # filter.pl - class for filter
 #
-# $Id: filter.pl.in,v 1.3 2004-10-17 09:35:41 usu Exp $
+# $Id: filter.pl.in,v 1.4 2004-10-20 14:48:37 opengl2772 Exp $
 #
 # Copyright (C) 2004 Yukio USUDA All rights reserved.
 # Copyright (C) 2000-2004 Namazu Project All rights reversed.
@@ -26,7 +26,7 @@
 package mknmz::filter;
 
 use strict;
-
+use English;
 require 'util.pl';
 require 'codeconv.pl';
 require 'var.pl';
@@ -42,7 +42,6 @@ my %Supported = ('text/plain' => "yes",);
 my $PKGDATADIR = $ENV{'pkgdatadir'} || "@pkgdatadir@";
 my $filterdir  = $PKGDATADIR . "/filter"; # directory where filters are in.
 
-my $system = $^O;
 
 sub new {
     my $self = {};
@@ -61,7 +60,7 @@ sub init {
 	$filterdir = $conf::FILTERDIR
     };
 
-    if (($system eq "MSWin32") || ($system eq "os2")) {
+    if (($English::OSNAME eq "MSWin32") || ($English::OSNAME eq "os2")) {
 	if ($filterdir !~ /^[A-Z]:|^\\\\/i && $0 =~ m#^([A-Z]:)(/|\\)#i) {
 	    $filterdir = $1 . $filterdir ;
 	}
@@ -213,7 +212,7 @@ sub _load_filtermodules ($){
     # Windows modules must be check only when Active Perl environment.
     # Because OLE filters use Win32::OLE module.
     #
-    if ($system eq "MSWin32"){
+    if ($English::OSNAME eq "MSWin32"){
 	@filters = (@filters, glob "$filterdir/win32/*.pl");
 	unshift @INC, "$filterdir/win32";
     }
