--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -32,6 +32,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.tex|.*\\.dvi" .   	   # TeX, DVI
 		"|.*\\.rpm|.*\\.deb" .   	   # RPM, DEB
 		"|.*\\.doc|.*\\.xls|.*\\.pp[st]" . # Word, Excel, PowerPoint
+                "|.*\\.vs[dst]|.*\\.v[dst]x" .     # Visio
 		"|.*\\.j[sabf]w|.*\\.jtd" .        # Ichitaro 4, 5, 6, 7, 8
 		"|.*\\.sx[widc]" .                 # OpenOffice Writer,Calc,Impress,Draw
 		"|.*\\.rtf" .   	           # Rich Text Format
