* pl/gettext.pl, HACKING, HACKING-ja : It corresponds xgettext 0.13.1. * scripts/mknmz.in, configure.in: It corresponds to MeCab.   The addition of the -b(--use-mecab) option. * pl/{conf.pl.in, usage.pl} : Ditto. * po/{POTFILES.in, ja.po, ja_JP.SJIS.po, namazu.pot} : Ditto.

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -208,7 +208,12 @@ $CHASEN = "@DO_CHASEN@";
 $CHASEN_NOUN = "@DO_CHASEN_NOUN@";
 
 #
-# Default Japanese processer: KAKASI or ChaSen.
+# MeCab
+#
+$MECAB = "@DO_MECAB@";
+
+#
+# Default Japanese processer: KAKASI or ChaSen or MeCab.
 #
 $WAKATI  = $@OPT_WAKATI_DEFAULT@;
 
