--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -35,6 +35,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
                 "|.*\\.vs[dst]|.*\\.v[dst]x" .     # Visio
 		"|.*\\.j[sabf]w|.*\\.jtd" .        # Ichitaro 4, 5, 6, 7, 8
 		"|.*\\.sx[widc]" .                 # OpenOffice Writer,Calc,Impress,Draw
+		"|.*\\.od[tspg]" .                 # OpenOffice2.0
 		"|.*\\.rtf" .   	           # Rich Text Format
 		"|.*\\.hdml|.*\\.mht" .		   # HDML MHTML
 		"|.*\\.mp3" .                      # MP3
@@ -251,6 +252,10 @@ $WAKATI  = $@OPT_WAKATI_DEFAULT@;
   'application/vnd.sun.xml.draw' => ['ooo.pl'],
   'application/vnd.sun.xml.impress' => ['ooo.pl'],
   'application/vnd.sun.xml.writer' => ['ooo.pl'],
+  'application/vnd.oasis.opendocument.text' => ['ooo.pl'],
+  'application/vnd.oasis.opendocument.spreadsheet' => ['ooo.pl'],
+  'application/vnd.oasis.opendocument.presentation' => ['ooo.pl'],
+  'application/vnd.oasis.opendocument.graphics' => ['ooo.pl'],
   'application/x-apache-cache' => ['apachecache.pl'],
   'application/x-bzip2' => ['bzip2.pl'],
   'application/x-compress' => ['compress.pl'],
